[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tordiff"
version = "0.0.0"
authors = [
  { name="B Jing,* G Corso,* J Chang, R Barzilay and T Jaakkola.", email="" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gcorso/torsional-diffusion"
